Jan 21, 2007 - chris
o the cursor implementation is finished and seems to work; testing is not 
    yet complete. 
o ham_flush now has an (unused) flags-parameter.
o renamed samples/simple.c to samples/db1.c

Jan 20, 2007 - chris
o created one global transaction-pointer in the database object, and 
    removed all transaction parameters for most functions; added tests that 
    only one single transaction object is created.

Dec 23, 2006 - chris ---------------------------------------------------
                      release of hamsterdb-0.3.1

Dec 23, 2006 - chris
o header-files are now installed to $prefix/include/ham
o test is not build if db.h is missing

Dec 19, 2006 - chris ---------------------------------------------------
                      release of hamsterdb-0.3

Dec 15, 2006 - chris
o started the port to MS Windows; so far, there are only two batch
    files to create the library, but no nmake file or Visual Studio 
    project.
o started to move the stuff to automake/autoconf; transition is not
    yet complete

Dec 10, 2006 - chris 
o a new parameter HAM_OPTIMIZE_SIZE creates smaller files by merging 
    freelist entries (comes at a small performance penalty)

Nov 26, 2006 - chris 
o extended keys are now cached (if the cache size is big enough) 

Nov 24, 2006 - chris 
o added HAM_DISABLE_FREELIST_FLUSH - when a freelist page is modified, it 
    is no longer flushed immediately. this is dangerous - in case of a 
    crash, the database is most likely broken.

Nov 23, 2006 - chris 
o fixed a small leak - if records are overwritten, and the new record size
    is smaller then sizeof(ham_offset_t), the old blob was not added to 
    the freelist

Nov 22, 2006 - chris 
o completely rewrote the freelist - elements are now sorted, and access is 
    a lot faster. also, elements are merged, if possible, which 
    results in smaller files
o fixed a bug; if the root page is split, the address of the root page