@@ -1,9 +1,12 @@
 
 INCLUDES		= -I$(top_builddir)/include
 
-noinst_PROGRAMS	= db1
+noinst_PROGRAMS	= db1 db2
 
 db1_SOURCES  	= db1.c
 db1_LDADD    	= $(top_builddir)/src/libhamsterdb.la
 
-noinst_BIN      = db1
+db2_SOURCES  	= db2.c
+db2_LDADD    	= $(top_builddir)/src/libhamsterdb.la
+
+noinst_BIN      = db1 db2
