@@ -106,6 +106,7 @@ main(int argc, char **argv)
             return (-1);
         }
     }
+#if 0
 
     /*
      * now erase all values
@@ -146,6 +147,7 @@ main(int argc, char **argv)
             return (-1);
         }
     }
+#endif
 
     /*
      * we're done! close the database handle
